# due-process-iep-agent

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  idea1-iep-enforcement-agent.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.streamlit/: config.toml
deploy/: README.md  build.sh  handler.py  requirements.txt  s.yaml  sample-proof-request.json  sample-request.json  sample-store-request.json
docs/: DEPLOYMENT_PROOF.md  PITCH_DECK.md  PRODUCT_STRATEGY.md  README.md  REDACTED_DEMO_CASE.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TWO_PERSON_DEMO_SCRIPT.md  architecture.md
docs/archive/: EARLY_DISCOVERY.md
src/due_process/: __init__.py  agent.py  analysis.py  artifact_store.py  cli.py  cloud_action.py  corpus.py  deadlines.py  filing.py  grounding.py  ingest.py  ledger.py  materiality.py  models.py  privacy.py  pwn.py  scenarios.py  store.py  systemic.py
src/due_process/evaluation/: __init__.py  baseline.py  dataset.py  metrics.py  run_eval.py
src/due_process/examples/: __init__.py  agent_demo.py  case_desk.py  qwen_smoketest.py  redacted_case.py  systemic_demo.py  vision_demo.py  worked_example.py
src/due_process/examples/data/: redacted_iep_service.txt  redacted_provider_note.txt  redacted_service_log.csv
src/due_process/instruments/: __init__.py  approval.py  drafter.py
src/due_process/llm/: __init__.py  classification.py  client.py  extraction.py  narrative.py  pwn_detect.py
tests/: conftest.py  test_agent.py  test_analysis.py  test_artifact_store.py  test_case_desk.py  test_classification.py  test_cli.py  test_cloud_action.py  test_corpus.py  test_deadlines.py  test_deploy_handler.py  test_evaluation.py  test_extraction.py  test_filing.py  test_grounding.py  test_ingest.py  test_instruments.py  test_ledger.py  test_materiality.py  test_narrative.py  test_privacy.py  test_pwn.py  test_pwn_detect.py  test_store.py  test_systemic.py  test_vision_privacy.py
