[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "due-process"
version = "0.1.0"
description = "An IEP service-delivery review agent: reconciles promised and recorded services, grounds potential gaps, estimates a discussion starting point, and drafts a cited review packet."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ankitlade12" }]
keywords = ["IEP", "IDEA", "special-education", "compliance", "FAPE", "qwen"]
dependencies = []

[project.optional-dependencies]
# Bounded LLM layer (Alibaba Cloud Model Studio is OpenAI-compatible).
llm = ["openai>=1.40"]
# Ingesting real documents (PDF text extraction).
ingest = ["pypdf>=4.0"]
# Dev / test (pillow generates the sample IEP image for the vision demo).
dev = ["pytest>=8.0", "pillow>=10.0"]
# Demo UI.
demo = ["streamlit>=1.36"]

[project.scripts]
due-process = "due_process.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"due_process.examples" = ["data/*.csv", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
